# crazyflie_simulation

./: .gitmodules  README.md
src/crazyflie_simulation/: CMakeLists.txt  package.xml
src/crazyflie_simulation/include/crazyflie_simulation/: crazyflie.hpp
src/crazyflie_simulation/include/crazyflie_simulation/crtp_driver/: console.hpp  eigen_transformations.hpp  generic_commander.hpp  hl_commander.hpp  localization.hpp  logging.hpp  parameters.hpp
src/crazyflie_simulation/include/crazyflie_simulation/simulation/: IController.hpp  controller.hpp  simulation.hpp
src/crazyflie_simulation/src/: crazyflie.cpp
src/crazyflie_simulation/src/crtp_driver/: console.cpp  generic_commander.cpp  hl_commander.cpp  localization.cpp  logblock.cpp  logging.cpp  parameters.cpp
src/crazyflie_simulation/src/simulation/: controller.cpp  simulation.cpp
src/crazyflie_simulation_examples/: package.xml  setup.cfg  setup.py
src/crazyflie_simulation_examples/config/: flies_config.yaml
src/crazyflie_simulation_examples/crazyflie_simulation_examples/: clock.py  crazyflie_example.py  crazyflie_spawner.py
src/crazyflie_simulation_examples/launch/: crazyflie_simulation_example.launch.py  example.launch.py  scalability.launch.py
src/crazyflie_simulation_gateway/: CMakeLists.txt  package.xml
src/crazyflie_simulation_gateway/include/crazyflie_simulation_gateway/: crazyflie_lifecycle_client.hpp
src/crazyflie_simulation_gateway/src/: crazyflie_lifecycle_client.cpp  gateway.cpp
src/crazyflie_webots/: CMakeLists.txt  package.xml
src/crazyflie_webots/crazyflie_webots/: cf_driver.py
src/crazyflie_webots/launch/: launch_wands.launch.py
src/crazyflie_webots/src/: crazyflie.cpp  wand.cpp
src/crazyflie_webots/src/crtp_driver/: console.cpp  generic_commander.cpp  hl_commander.cpp  localization.cpp  logblock.cpp  logging.cpp  parameters.cpp
src/crazyflie_webots_cpp/: CMakeLists.txt  package.xml
src/crazyflie_webots_cpp/src/: crazyflie.cpp  wand.cpp
src/crazyflie_webots_examples/: setup.py
src/crazyflie_webots_examples/crazyflie_webots_examples/: crazyflie_client.py  crazyflie_example.py
src/crazyflie_webots_examples/launch/: crazyflie_webots_example.launch.py
src/crazyflie_webots_gateway/: CMakeLists.txt  package.xml
src/crazyflie_webots_gateway/crazyflie_webots_gateway/: gateway.py
src/crazyflie_webots_gateway/launch/: gateway.launch.py
src/crazyflie_webots_gateway/src/: gateway.cpp
src/crazyflie_webots_gateway_cpp/: CMakeLists.txt  package.xml
src/crazyflie_webots_gateway_cpp/src/: crazyflie_lifecycle_client.cpp  gateway.cpp
(+33 files in other folders)
